<resources>
    <string name="app_name">Udacity_InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="insert">insert</string>
    <string name="delete">delete</string>
    <string name="minus">-</string>
    <string name="write_quantity">write quantity</string>
    <string name="plus">+</string>
    <string name="add_image">add image</string>
    <string name="write_price">write price</string>
    <string name="price">Price:</string>
    <string name="give_your_product_name">Give your product name</string>
    <string name="product_name">Product name:</string>
    <string name="picture_of_product">picture of product</string>
    <string name="please_press_add_button_in_order_to_get_the_list">please press add button in order to get the list</string>
    <string name="product_name_n">product name</string>
    <string name="items_left">Items left:</string>
    <string name="eur">EUR:</string>
    <string name="_77">77</string>
    <string name="sell">sell</string>
    <string name="_10">10</string>
    <string name="thumbnail_of_chosen_product_image">thumbnail of chosen product image</string>
    <string name="save">save</string>
    <string name="delete_this_product">delete this product</string>
    <string name="contact_provider">contact provider</string>
</resources>
